--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   flutter:
     sdk: flutter
   intl: ^0.17.0
+  qr_flutter: ^4.0.0
+  flutter_colorpicker: ^1.0.3
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -66,6 +68,7 @@ flutter:
   #   - images/a_dot_ham.jpeg
   assets:
     - Assets/Images/waiting.png
+    - Assets/Images/myPic.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
