--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,8 @@ dependencies:
     sdk: flutter
   intl: ^0.17.0
   qr_flutter: ^4.0.0
-  
+
+  flutter_zoom_drawer: ^3.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
